--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "polished": "^3.6.7",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-dropzone": "^11.2.0",
     "react-icons": "^3.11.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
