--- a/backend/.eslintrc.json
+++ b/backend/.eslintrc.json
@@ -20,7 +20,9 @@
   ],
   "rules": {
     "class-methods-use-this": "off",
+    "@typescript-eslint/ban-ts-comment": "off",
     "camelcase": "off",
+    "consistent-return": "off",
      "import/extensions": [
       "error",
       "ignorePackages",
